; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_avx.c_assert_ymm_eq.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_avx.c_assert_ymm_eq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vec_str_buf = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [29 x i8] c"Compare failed, vector A:\0A%s\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"Compare failed, vector B:\0A%s\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"vectors not equal\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @assert_ymm_eq(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i64 @memcmp_unoptimized(i8* %7, i8* %8, i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %24

12:                                               ; preds = %3
  %13 = load i8*, i8** %4, align 8
  %14 = load i32, i32* @vec_str_buf, align 4
  %15 = call i32 @vec256_to_string(i8* %13, i32 %14)
  %16 = load i32, i32* @vec_str_buf, align 4
  %17 = call i32 @T_LOG(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load i8*, i8** %5, align 8
  %19 = load i32, i32* @vec_str_buf, align 4
  %20 = call i32 @vec256_to_string(i8* %18, i32 %19)
  %21 = load i32, i32* @vec_str_buf, align 4
  %22 = call i32 @T_LOG(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i32 %21)
  %23 = call i32 @T_ASSERT_FAIL(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  br label %24

24:                                               ; preds = %12, %3
  ret void
}

declare dso_local i64 @memcmp_unoptimized(i8*, i8*, i32) #1

declare dso_local i32 @vec256_to_string(i8*, i32) #1

declare dso_local i32 @T_LOG(i8*, i32) #1

declare dso_local i32 @T_ASSERT_FAIL(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
